# nix-badge-rc

./: Cargo.toml  README.md  espflash.nix  flake.nix  sdkconfig.defaults
src/: client.rs  led.rs  main.rs  wifi.rs
