[package]
name = "nixbadgerc"
version = "0.1.0"
authors = ["Ezri Zhu <me@ezrizhu.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "nixbadgerc"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0.98"
rgb = "0.8.50"
esp-idf-hal = { version = "0.45.2", features = ["embassy-sync", "rmt-legacy"] }
embassy-sync = "0.7.0"
riscv-rt = "0.15.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
serde = "1.0.219"
embedded-svc = "0.28.1"
serde_json = "1.0.143"

[build-dependencies]
embuild = "0.33"
